[package]
name = "dseitz_rust_os"
version = "0.1.0"
authors = ["Daniel Seitz <dnseitz@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "0.1.4"
spin = "0.3.4"
[dependencies.multiboot2]
git = "https://github.com/phil-opp/multiboot2-elf64"
[dependencies.bitflags]
version = "0.4.0"
features = ["no_std"]
[dependencies.x86]
version = "0.6.0"
default-features = false
