[package]
authors = ["Daniel Seitz <dnseitz@gmail.com>"]
name = "dseitz_rust_os"
version = "0.1.0"

[dependencies]
once = "0.2.1"
rlibc = "0.1.4"
spin = "0.3.4"

[dependencies.bitflags]
features = ["no_std"]
version = "0.4.0"

[dependencies.bump_allocator]
path = "libs/bump_allocator"

[dependencies.hole_list_allocator]
path = "libs/hole_list_allocator"

[dependencies.interrupts]
path = "libs/interrupts"

[dependencies.multiboot2]
git = "https://github.com/phil-opp/multiboot2-elf64"

[dependencies.x86]
default-features = false
version = "0.6.0"

[lib]
crate-type = ["staticlib"]
